[package]
name = "rdraw_area"
version = "0.1.0"
edition = "2021"
author = "Enokai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xrandr = "0.1.1"
log = { version = "0.4", features = ["std", "serde", "max_level_debug", "release_max_level_warn"] }
regex = "1.7.0"
toml = "0.5.9"
serde_derive = "1.0.147"
serde = "1.0.147"
home = "0.5.4"
rustyline = "10.0.0"
clap = { version = "4.0.29", features = ["derive"] }

[profile.release]
opt-level = 3
panic = "abort"
lto = true
strip = true
# upx --best --lzma target/release/rdraw_area
